Remove GET context
